Revert "fix the fix for the dark mode button lol"
This reverts commit cd50064c2d5c9a0cb02b86734f129e099343287d.

--- a/final/style/darkmode.css
+++ b/final/style/darkmode.css
@@ -10,6 +10,6 @@
     text-decoration: none;
     height: 30px;
     position: absolute;
-    left: 80px;
-    top:90px;
+    left:8%;
+    top:13%
 }
